--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo" href="index.html"><img src="/img/index-logo.svg" width="368" height="153"
+            alt="Логотип тур-агенства &laquo;Седонна&raquo;"></a><ul class="site-navigation">
+              <li><a href="info.html">Информация</a></li>
+              <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
+              <li><a href="Statemap.html">Карта штата</a></li>
+              <li><a href="hotel.html">Гостиницы</a></li>
+            </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <h1 class="visually-hidden">Тур-агенство &laquo;Седонна&raquo;</h1>
+      <section class=""></section>
+    </main>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
 
   </body>
 </html>
