--- a/index.html
+++ b/index.html
@@ -17,9 +17,68 @@
       </nav>
     </header>
     <main class="container">
-      <h1 class="visually-hidden">Тур-агенство &laquo;Седонна&raquo;</h1>
-      <section class=""></section>
+      <section class="feature">
+        <h2>Седонна - небольшой городок в Аризоне,<br>
+        заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+
+      </section>
+      <section class="">
+        <figure class=""><img src="http://placehold.it/150x100">
+        <figcaption><h3>Настоящий городок</h3>
+        <p>-№1-</p>
+        <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+        </figcaption></figure>
+      </section>
+      <section class="features">
+        <h3 class="feature-home">жильё</h3><p></p>
+        <h3 class="feature-food">еда</h3><p></p>
+        <h3 class="feature-souvenir">сувениры</h3><p></p>
+      </section>
+      <section class="">
+        <figure class=""><img src="http://placehold.it/150x100">
+          <figcaption>
+            <h3>Там есть мост дьявола</h3>
+            <p>-№2-</p>
+            <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
+          </figcaption>
+        </figure>
+      </section>
+      <section>
+        <div>
+          <h3>Небольшая площадь</h3>
+          <p>-№3-</p>
+          <p>все достопримечательности находятся очень близко</p>
+        </div>
+        <div>
+          <h3>Красивая дорога</h3>
+          <p>-№4-</p>
+          <p>Ехать в седонну из лас-вегаса совсем не скучно</p>
+        </div>
+        <div>
+          <h3>Мало туристов</h3>
+          <p>-№5-</p>
+          <p>Большинство едет в гранд каньон и толпится там</p>
+        </div>
+      </section>
+      <section class="map">
+        <h2>Заинтересоваплись?</h2>
+        <p>Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      </section>
     </main>
+    <footer class="main-footer">
+      <div class="footer-social">
+        <ul>
+          <li><a href="#" class="social-button">Вконтакте</a></li>
+          <li><a href="#" class="social-button">Фейсбук</a></li>
+          <li><a href="#" class="social-button">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>website by</b>
+        <a href="https://htmlacademy.ru" class="button">HTML Academy</a>
+      </p>
+    </footer>
 
     <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
 
