--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
 
       </section>
-      <section class="">
-        <figure class=""><img src="http://placehold.it/150x100">
+      <section class="main-city">
+        <figure class="main-photo"><img src="http://placehold.it/150x100">
         <figcaption><h3>Настоящий городок</h3>
         <p>-№1-</p>
         <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
@@ -35,8 +35,8 @@
         <h3 class="feature-food">еда</h3><p></p>
         <h3 class="feature-souvenir">сувениры</h3><p></p>
       </section>
-      <section class="">
-        <figure class=""><img src="http://placehold.it/150x100">
+      <section class="main-canyon">
+        <figure class="main-photograph"><img src="http://placehold.it/150x100">
           <figcaption>
             <h3>Там есть мост дьявола</h3>
             <p>-№2-</p>
