--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
       </section>
       <section class="main-city">
-        <figure class="main-photo"><img src="http://placehold.it/150x100">
-        <figcaption><h3>Настоящий городок</h3>
+        <div class="main-photo">
+          <img src="http://placehold.it/150x100" alt="">
+        </div>
+        <div class="main-sign"><h3>Настоящий городок</h3>
         <p>-№1-</p>
         <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        </figcaption></figure>
+      </div>
       </section>
       <section class="features">
         <h3 class="feature-home">жильё</h3><p></p>
@@ -36,30 +38,30 @@
         <h3 class="feature-souvenir">сувениры</h3><p></p>
       </section>
       <section class="main-canyon">
-        <figure class="main-photograph"><img src="http://placehold.it/150x100">
-          <figcaption>
-            <h3>Там есть мост дьявола</h3>
+        <div class="main-photograph">
+          <img src="http://placehold.it/150x100" alt="">
+        </div>
+            <div class="main-sign"><h3>Там есть мост дьявола</h3>
             <p>-№2-</p>
             <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
-          </figcaption>
-        </figure>
+          </div>
       </section>
       <section>
-        <div>
-          <h3>Небольшая площадь</h3>
-          <p>-№3-</p>
-          <p>все достопримечательности находятся очень близко</p>
-        </div>
-        <div>
-          <h3>Красивая дорога</h3>
-          <p>-№4-</p>
-          <p>Ехать в седонну из лас-вегаса совсем не скучно</p>
-        </div>
-        <div>
-          <h3>Мало туристов</h3>
-          <p>-№5-</p>
-          <p>Большинство едет в гранд каньон и толпится там</p>
-        </div>
+      <ul>
+        <li>Небольшая площадь</li>
+        <li>-№3-</li>
+        <li>все достопримечательности находятся очень близко</li>
+      </ul>
+        <ul>
+          <li>Красивая дорога</li>
+          <li>-№4-</li>
+          <li>Ехать в седонну из лас-вегаса совсем не скучно</li>
+        </ul>
+        <ul>
+          <li>Мало туристов</li>
+          <li>-№5-</li>
+          <li>Большинство едет в гранд каньон и толпится там</li>
+        </ul>
       </section>
       <section class="map">
         <h2>Заинтересоваплись?</h2>
@@ -67,6 +69,7 @@
       </section>
     </main>
     <footer class="main-footer">
+      <p>#VISITSEDONA</p>
       <div class="footer-social">
         <ul>
           <li><a href="#" class="social-button">Вконтакте</a></li>
@@ -79,8 +82,5 @@
         <a href="https://htmlacademy.ru" class="button">HTML Academy</a>
       </p>
     </footer>
-
-    <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
-
   </body>
 </html>
