--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html"><img src="/img/index-logo.svg" width="368" height="153"
-            alt="Логотип тур-агенства &laquo;Седонна&raquo;"></a><ul class="site-navigation">
+        <a class="main-header-logo" href="index.html">
+          <img src="/img/index-logo.svg" width="368" height="153"
+            alt="Логотип тур-агенства &laquo;Седонна&raquo;"></a>
+            <ul class="site-navigation">
               <li><a href="info.html">Информация</a></li>
               <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
               <li><a href="Statemap.html">Карта штата</a></li>
@@ -16,12 +18,11 @@
             </ul>
       </nav>
     </header>
-    <main class="container">
+    <main>
       <section class="feature">
         <h2>Седонна - небольшой городок в Аризоне,<br>
-        заслуживающий большего!</h2>
+          заслуживающий большего!</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
-
       </section>
       <section class="main-city">
         <div class="main-photo">
@@ -33,9 +34,12 @@
       </div>
       </section>
       <section class="features">
-        <h3 class="feature-home">жильё</h3><p></p>
-        <h3 class="feature-food">еда</h3><p></p>
-        <h3 class="feature-souvenir">сувениры</h3><p></p>
+        <h3 class="feature-home">жильё</h3>
+        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        <h3 class="feature-food">еда</h3>
+        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <h3 class="feature-souvenir">сувениры</h3>
+        <p>Нетолько китайского, но и местного производства!</p>
       </section>
       <section class="main-canyon">
         <div class="main-photograph">
@@ -46,7 +50,7 @@
             <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
           </div>
       </section>
-      <section>
+      <section class="main-comfort">
       <ul>
         <li>Небольшая площадь</li>
         <li>-№3-</li>
