--- a/index.html
+++ b/index.html
@@ -1,90 +1,109 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
-          <img src="/img/index-logo.svg" width="368" height="153"
-            alt="Логотип тур-агенства &laquo;Седонна&raquo;"></a>
-            <ul class="site-navigation">
-              <li><a href="info.html">Информация</a></li>
-              <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
-              <li><a href="Statemap.html">Карта штата</a></li>
-              <li><a href="hotel.html">Гостиницы</a></li>
-            </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="feature">
-        <h2>Седонна - небольшой городок в Аризоне,<br>
-          заслуживающий большего!</h2>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
-      </section>
-      <section class="main-city">
-        <div class="main-photo">
-          <img src="http://placehold.it/150x100" alt="">
-        </div>
-        <div class="main-sign"><h3>Настоящий городок</h3>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
+        <img src="/img/index-logo.svg" width="368" height="153" alt="Логотип тур-агенства &laquo;Седонна&raquo;">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
+        <li><a href="Statemap.html">Карта штата</a></li>
+        <li><a href="hotel.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="feature">
+      <h2>Седонна - небольшой городок в Аризоне,<br>
+        заслуживающий большего!</h2>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+    </section>
+    <section class="main-city">
+      <div class="main-photo">
+        <img src="http://placehold.it/150x100" alt="">
+      </div>
+      <div class="main-sign">
+        <h3>Настоящий городок</h3>
         <p>-№1-</p>
         <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
-      </section>
-      <section class="features">
-        <h3 class="feature-home">жильё</h3>
-        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        <h3 class="feature-food">еда</h3>
-        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        <h3 class="feature-souvenir">сувениры</h3>
-        <p>Нетолько китайского, но и местного производства!</p>
-      </section>
-      <section class="main-canyon">
-        <div class="main-photograph">
-          <img src="http://placehold.it/150x100" alt="">
-        </div>
-            <div class="main-sign"><h3>Там есть мост дьявола</h3>
-            <p>-№2-</p>
-            <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
-          </div>
-      </section>
-      <section class="main-comfort">
+    </section>
+    <section class="features">
+      <ul>
+        <li class="feature-home">
+          <h3>жильё</h3>
+        </li>
+        <li>Рекомендуем пожить в настоящем мотеле,<br>
+          всё как в кино!
+        </li>
+        <li class="feature-food">
+          <h3>еда</h3>
+        </li>
+        <li>Всегда заказывайте фирменный бургер,<br>
+          вы не разочаруетесь!</li>
+        <li class="feature-souvenir">
+          <h3>сувениры</h3>
+        </li>
+        <li>Нетолько китайского, но и местного<br>
+          производства!</li>
+      </ul>
+    </section>
+    <section class="main-city">
+      <div class="main-photo">
+        <img src="http://placehold.it/150x100" alt="">
+      </div>
+      <div class="main-sign">
+        <h3>Там есть мост дьявола</h3>
+        <p>-№2-</p>
+        <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
+      </div>
+    </section>
+    <section class="main-comfort">
+      <h2>Наши преимущества</h2>
       <ul>
         <li>Небольшая площадь</li>
         <li>-№3-</li>
-        <li>все достопримечательности находятся очень близко</li>
+        <li>все достопримечательности<br>
+          находятся очень близко</li>
       </ul>
-        <ul>
-          <li>Красивая дорога</li>
-          <li>-№4-</li>
-          <li>Ехать в седонну из лас-вегаса совсем не скучно</li>
-        </ul>
-        <ul>
-          <li>Мало туристов</li>
-          <li>-№5-</li>
-          <li>Большинство едет в гранд каньон и толпится там</li>
-        </ul>
-      </section>
-      <section class="map">
-        <h2>Заинтересоваплись?</h2>
-        <p>Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      </section>
-    </main>
-    <footer class="main-footer">
-      <p>#VISITSEDONA</p>
-      <div class="footer-social">
-        <ul>
-          <li><a href="#" class="social-button">Вконтакте</a></li>
-          <li><a href="#" class="social-button">Фейсбук</a></li>
-          <li><a href="#" class="social-button">Инстаграм</a></li>
-        </ul>
-      </div>
-      <p class="footer-copyright">
-        <b>website by</b>
-        <a href="https://htmlacademy.ru" class="button">HTML Academy</a>
-      </p>
-    </footer>
-  </body>
+      <ul>
+        <li>Красивая дорога</li>
+        <li>-№4-</li>
+        <li>Ехать в седонну из лас-вегаса совсем<br>
+          не скучно</li>
+      </ul>
+      <ul>
+        <li>Мало туристов</li>
+        <li>-№5-</li>
+        <li>Большинство едет в гранд каньон<br>
+          и толпится там</li>
+      </ul>
+    </section>
+    <section class="map">
+      <h2>Заинтересоваплись?</h2>
+      <p>Укажите предпологаемые даты поездки,<br>
+        и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <p class="main-footer-tag">#VISITSEDONA</p>
+    <div class="footer-social">
+      <ul>
+        <li><a href="#" class="social-button">Вконтакте</a></li>
+        <li><a href="#" class="social-button">Фейсбук</a></li>
+        <li><a href="#" class="social-button">Инстаграм</a></li>
+      </ul>
+    </div>
+    <p class="footer-copyright">
+      <b>website by</b>
+      <a href="https://htmlacademy.ru" class="button">HTML Academy</a>
+    </p>
+  </footer>
+</body>
 </html>
