--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
+      <a class="main-header-logo" href="/index.html">
         <img src="/img/index-logo.svg" width="368" height="153" alt="Логотип тур-агенства &laquo;Седонна&raquo;">
       </a>
       <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
+        <li><a href="/info.html">Информация</a></li>
         <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
         <li><a href="Statemap.html">Карта штата</a></li>
-        <li><a href="hotel.html">Гостиницы</a></li>
+        <li><a href="/catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section class="feature">
-      <h2>Седонна - небольшой городок в Аризоне,<br>
+      <h2>Седонна - небольшой городок в Аризоне,
         заслуживающий большего!</h2>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
     </section>
@@ -29,7 +29,8 @@
         <img src="http://placehold.it/150x100" alt="">
       </div>
       <div class="main-sign">
-        <h3>Настоящий городок</h3>
+        <h3>Настоящий<br>
+          городок</h3>
         <p>-№1-</p>
         <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
@@ -39,18 +40,18 @@
         <li class="feature-home">
           <h3>жильё</h3>
         </li>
-        <li>Рекомендуем пожить в настоящем мотеле,<br>
+        <li>Рекомендуем пожить в настоящем мотеле,
           всё как в кино!
         </li>
         <li class="feature-food">
           <h3>еда</h3>
         </li>
-        <li>Всегда заказывайте фирменный бургер,<br>
+        <li>Всегда заказывайте фирменный бургер,
           вы не разочаруетесь!</li>
         <li class="feature-souvenir">
           <h3>сувениры</h3>
         </li>
-        <li>Нетолько китайского, но и местного<br>
+        <li>Нетолько китайского, но и местного
           производства!</li>
       </ul>
     </section>
@@ -59,7 +60,8 @@
         <img src="http://placehold.it/150x100" alt="">
       </div>
       <div class="main-sign">
-        <h3>Там есть мост дьявола</h3>
+        <h3>Там есть<br>
+          мост дьявола</h3>
         <p>-№2-</p>
         <p>Да, понему можно пройти! Если конечно вы осмелитись</p>
       </div>
@@ -69,40 +71,38 @@
       <ul>
         <li>Небольшая площадь</li>
         <li>-№3-</li>
-        <li>все достопримечательности<br>
+        <li>все достопримечательности
           находятся очень близко</li>
       </ul>
       <ul>
         <li>Красивая дорога</li>
         <li>-№4-</li>
-        <li>Ехать в седонну из лас-вегаса совсем<br>
+        <li>Ехать в седонну из лас-вегаса совсем
           не скучно</li>
       </ul>
       <ul>
         <li>Мало туристов</li>
         <li>-№5-</li>
-        <li>Большинство едет в гранд каньон<br>
+        <li>Большинство едет в гранд каньон
           и толпится там</li>
       </ul>
     </section>
     <section class="map">
-      <h2>Заинтересоваплись?</h2>
-      <p>Укажите предпологаемые даты поездки,<br>
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предпологаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в седоне</p>
     </section>
   </main>
   <footer class="main-footer">
     <p class="main-footer-tag">#VISITSEDONA</p>
-    <div class="footer-social">
-      <ul>
+      <ul class="footer-social">
         <li><a href="#" class="social-button">Вконтакте</a></li>
         <li><a href="#" class="social-button">Фейсбук</a></li>
         <li><a href="#" class="social-button">Инстаграм</a></li>
       </ul>
-    </div>
     <p class="footer-copyright">
       <b>website by</b>
-      <a href="https://htmlacademy.ru" class="button">HTML Academy</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss" class="button">HTML Academy</a>
     </p>
   </footer>
 </body>
