--- a/catalog.html
+++ b/catalog.html
@@ -9,14 +9,14 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
+      <a class="main-header-logo" href="/index.html">
         <img src="/img/index-logo.svg" width="368" height="153" alt="Логотип тур-агенства &laquo;Седонна&raquo;">
       </a>
       <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
+        <li><a href="/info.html">Информация</a></li>
         <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
         <li><a href="Statemap.html">Карта штата</a></li>
-        <li><a href="hotel.html">Гостиницы</a></li>
+        <li><a href="/catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -41,44 +41,48 @@
   <main>
     <h2>Найдено: 3</h2>
     <p>Сортировать:</p>
-    <nav>
-      <ul class="catalog-navigation">
-        <li><a href="price.html">По цене</a></li>
-        <li><a href="type_of.html">По типу</a></li>
-        <li><a href="rated.html">По рейтингу</a></li>
-      </ul>
-    </nav>
+    <ul class="catalog-navigation">
+      <li><a href="price.html">По цене</a></li>
+      <li><a href="type_of.html">По типу</a></li>
+      <li><a href="rated.html">По рейтингу</a></li>
+    </ul>
     <section class="gallery">
-      <h3>Amara Resort & Spa</h3>
       <div class="main-gallery">
         <img src="http://placehold.it/150x100" alt="">
+        <a href="" alt="">Amara Resort & Spa</a>
       </div>
-    </section>
-    <section class="gallery">
-      <h3>Desert Quail inn</h3>
-      <div class="main-gallery">
-        <img src="http://placehold.it/150x100" alt="">
+      <div>
+        <p>Гостиница от 4000 Р.</p>
+        <input type="submit" value="Подробнее">
+        <input type="submit" value="Забронировать">
       </div>
-    </section>
-    <section class="gallery">
-      <h3>Villas At Poco Diabolo</h3>
       <div class="main-gallery">
         <img src="http://placehold.it/150x100" alt="">
+        <a href="" alt="">Desert Quail inn</a>
+        <p>Мотель от 3000 Р.</p>
+        <input type="submit" value="Подробнее">
+        <input type="submit" value="Забронировать">
+      </div>
+      <div class="main-gallery">
+        <img src="http://placehold.it/150x100" alt="">
+        <a href="" alt="">Villas At Poco Diabolo</a>
+        <p>Апартаменты</p>
+        <input type="submit" value="Подробнее">
+        <input type="submit" value="Забронировать">
+
       </div>
     </section>
   </main>
   <footer class="main-footer">
     <p class="main-footer-tag">#VISITSEDONA</p>
-    <div class="footer-social">
-      <ul>
-        <li><a href="#" class="social-button">Вконтакте</a></li>
-        <li><a href="#" class="social-button">Фейсбук</a></li>
-        <li><a href="#" class="social-button">Инстаграм</a></li>
-      </ul>
-    </div>
+    <ul class="footer-social">
+      <li><a href="#" class="social-button">Вконтакте</a></li>
+      <li><a href="#" class="social-button">Фейсбук</a></li>
+      <li><a href="#" class="social-button">Инстаграм</a></li>
+    </ul>
     <p class="footer-copyright">
       <b>website by</b>
-      <a href="https://htmlacademy.ru" class="button">HTML Academy</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss" class="button">HTML Academy</a>
     </p>
   </footer>
 </body>
