--- a/catalog.html
+++ b/catalog.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
 </head>
+
 <body>
   <header class="main-header">
     <nav class="main-navigation">
@@ -11,10 +13,10 @@
         <img src="/img/index-logo.svg" width="368" height="153" alt="Логотип тур-агенства &laquo;Седонна&raquo;">
       </a>
       <ul class="site-navigation">
-        <li><a href="/info.html">Информация</a></li>
+        <li><a href="info.html">Информация</a></li>
         <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
         <li><a href="Statemap.html">Карта штата</a></li>
-        <li><a href="/catalog.html">Гостиницы</a></li>
+        <li><a href="http://127.0.0.1:5500/catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -45,29 +47,30 @@
       <li><a href="rated.html">По рейтингу</a></li>
     </ul>
     <section class="gallery">
+      <h2>Каталог</h2>
       <div class="main-gallery">
         <img src="http://placehold.it/150x100" alt="">
-        <a href="" alt="">Amara Resort & Spa</a>
+        <img src="http://placehold.it/150x100" alt="">
+        <img src="http://placehold.it/150x100" alt="">
       </div>
       <div>
+        <a href="">Amara Resort & Spa</a>
         <p>Гостиница от 4000 Р.</p>
         <input type="submit" value="Подробнее">
-        <input type="submit" value="Забронировать">
-      </div>
-      <div class="main-gallery">
-        <img src="http://placehold.it/150x100" alt="">
-        <a href="" alt="">Desert Quail inn</a>
+        <input type="submit" value="Забронировать"><br>
+        <a href="">Desert Quail inn</a>
         <p>Мотель от 3000 Р.</p>
         <input type="submit" value="Подробнее">
-        <input type="submit" value="Забронировать">
-      </div>
-      <div class="main-gallery">
-        <img src="http://placehold.it/150x100" alt="">
-        <a href="" alt="">Villas At Poco Diabolo</a>
+        <input type="submit" value="Забронировать"><br>
+        <a href="">Villas At Poco Diabolo</a>
         <p>Апартаменты</p>
         <input type="submit" value="Подробнее">
         <input type="submit" value="Забронировать">
-
+      </div>
+      <div>
+        <p>Рейтинг: 8,5</p>
+        <p>Рейтинг: 8,9</p>
+        <p>Рейтинг: 9,2</p>
       </div>
     </section>
   </main>
@@ -84,4 +87,5 @@
     </p>
   </footer>
 </body>
+
 </html>
