--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="/index.html">
+      <a class="main-header-logo" href="http://127.0.0.1:5500/catalog.html">
         <img src="/img/index-logo.svg" width="368" height="153" alt="Логотип тур-агенства &laquo;Седонна&raquo;">
       </a>
       <ul class="site-navigation">
-        <li><a href="/info.html">Информация</a></li>
+        <li><a href="info.html">Информация</a></li>
         <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
         <li><a href="Statemap.html">Карта штата</a></li>
-        <li><a href="/catalog.html">Гостиницы</a></li>
+        <li><a href="http://127.0.0.1:5500/catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -29,7 +29,7 @@
         <img src="http://placehold.it/150x100" alt="">
       </div>
       <div class="main-sign">
-        <h3>Настоящий<br>
+        <h3>Настоящий
           городок</h3>
         <p>-№1-</p>
         <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
