--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="info.html">Информация</a></li>
         <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
         <li><a href="Statemap.html">Карта штата</a></li>
-        <li><a href="http://127.0.0.1:5500/catalog.html">Гостиницы</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
