--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
+  <title>Главная</title>
 </head>
+
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="http://127.0.0.1:5500/catalog.html">
-        <img src="/img/index-logo.svg" width="368" height="153" alt="Логотип тур-агенства &laquo;Седонна&raquo;">
+      <a class="main-header-logo">
+        <img src="img/index-logo.svg" width="368" height="153" alt="Логотип тур-агенства Седонна">
       </a>
       <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
-        <li><a href="PhotoandVideo.html">Фото и Видео</a></li>
+        <li><a href="#">Информация</a></li>
+        <li><a href="#">Фото и Видео</a></li>
         <li><a href="Statemap.html">Карта штата</a></li>
-        <li><a href="catalog.html">Гостиницы</a></li>
+        <li><a href="hotel.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -39,20 +41,19 @@
       <ul>
         <li class="feature-home">
           <h3>жильё</h3>
-        </li>
-        <li>Рекомендуем пожить в настоящем мотеле,
-          всё как в кино!
+          <p>Рекомендуем пожить в настоящем мотеле,
+            всё как в кино!</p>
         </li>
         <li class="feature-food">
           <h3>еда</h3>
+          <p>Всегда заказывайте фирменный бургер,
+            вы не разочаруетесь!</p>
         </li>
-        <li>Всегда заказывайте фирменный бургер,
-          вы не разочаруетесь!</li>
         <li class="feature-souvenir">
           <h3>сувениры</h3>
+          <p>Нетолько китайского, но и местного
+            производства!</p>
         </li>
-        <li>Нетолько китайского, но и местного
-          производства!</li>
       </ul>
     </section>
     <section class="main-city">
@@ -69,41 +70,47 @@
     <section class="main-comfort">
       <h2>Наши преимущества</h2>
       <ul>
-        <li>Небольшая площадь</li>
-        <li>-№3-</li>
-        <li>все достопримечательности
-          находятся очень близко</li>
+        <li>
+          <h3>Небольшая площадь</h3>
+          <p>-№3-</p>
+          <p>все достопримечательности
+            находятся очень близко</p>
+        </li>
+        <li>
+          <h3>Красивая дорога</h3>
+          <p>-№4-</p>
+          <p>Ехать в седонну из лас-вегаса совсем
+            не скучно</p>
+        </li>
       </ul>
       <ul>
-        <li>Красивая дорога</li>
-        <li>-№4-</li>
-        <li>Ехать в седонну из лас-вегаса совсем
-          не скучно</li>
-      </ul>
-      <ul>
-        <li>Мало туристов</li>
-        <li>-№5-</li>
-        <li>Большинство едет в гранд каньон
-          и толпится там</li>
+        <li>
+          <h3>Мало туристов</h3>
+          <p>-№5-</p>
+          <p>Большинство едет в гранд каньон
+            и толпится там</p>
+        </li>
       </ul>
     </section>
     <section class="map">
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предпологаемые даты поездки,
+      <h3>Поиск гостиниц</h3>
+      <p class="map__title">Заинтересовались?</p>
+      <p class="map__desc">Укажите предпологаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в седоне</p>
     </section>
   </main>
   <footer class="main-footer">
     <p class="main-footer-tag">#VISITSEDONA</p>
-      <ul class="footer-social">
-        <li><a href="#" class="social-button">Вконтакте</a></li>
-        <li><a href="#" class="social-button">Фейсбук</a></li>
-        <li><a href="#" class="social-button">Инстаграм</a></li>
-      </ul>
+    <ul class="footer-social">
+      <li><a href="#" class="social-button">Вконтакте</a></li>
+      <li><a href="#" class="social-button">Фейсбук</a></li>
+      <li><a href="#" class="social-button">Инстаграм</a></li>
+    </ul>
     <p class="footer-copyright">
       <b>website by</b>
-      <a href="https://htmlacademy.ru/intensive/htmlcss" class="button">HTML Academy</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
     </p>
   </footer>
 </body>
+
 </html>
