--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </header>
   <main>
     <section class="feature">
-      <h2>Седонна - небольшой городок в Аризоне,
-        заслуживающий большего!</h2>
+      <p class="headline">Седонна - небольшой городок в Аризоне,
+      заслуживающий большего!</p>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
     </section>
     <section class="main-city">
@@ -79,9 +79,7 @@
           <p>-№4-</p>
           <p>Ехать в седонну из лас-вегаса совсем
             не скучно</p>
-        </li>
-      </ul>
-      <ul>
+          </li>
         <li>
           <h3>Мало туристов</h3>
           <p>-№5-</p>
@@ -91,7 +89,7 @@
       </ul>
     </section>
     <section class="map">
-      <h3>Поиск гостиниц</h3>
+      <h2>Поиск гостиниц</h2>
       <p class="map__title">Заинтересовались?</p>
       <p class="map__desc">Укажите предпологаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в седоне</p>
