--- a/index.html
+++ b/index.html
@@ -108,22 +108,24 @@
     <ul class="footer-social">
       <li>
         <a href="#" class="social-button">
-          <img src="img/twitter.svg" alt="Твиттер">Твиттер
+          <img src="img/twitter.svg" width="46" height="48" alt="Твиттер">Твиттер
         </a>
       </li>
       <li>
         <a href="#" class="social-button">
-          <img src="img/fb-icon.svg" alt="Фейсбук">Фейсбук
+          <img src="img/fb-icon.svg" width="46" height="48" alt="Фейсбук">Фейсбук
         </a>
       </li>
       <li>
         <a href="#" class="social-button">
-          <img src="img/youtube.svg" alt="Ютуб">Ютуб</a>
+          <img src="img/youtube.svg" width="46" height="48" alt="Ютуб">Ютуб</a>
       </li>
     </ul>
     <p class="footer-copyright">
       <b>website by</b>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="HTML Academy">HTML Academy
+      </a>
     </p>
   </footer>
 </body>
