--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </nav>
   </header>
   <main>
-    <section class="legend">
-      <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
-      <img src="img/intro-mask.svg" width="1201" height="59" alt="Маска">
-    </section>
+      <section class="legend">
+        <img src="img/intro-welcome.svg" width="459" height="353" alt="Добро пожаловать">
+
+      </section>
     <section class="feature">
       <p class="headline">Седонна - небольшой городок в Аризоне,
         заслуживающий большего!</p>
@@ -31,7 +31,7 @@
     </section>
     <section class="main-city">
       <div class="main-photo">
-        <img src="img/feature-picture.png" width="800" height="256" alt="Отель">
+        <img src="img/feature-picture.jpg" width="800" height="256" alt="Отель">
       </div>
       <div class="main-sign">
         <h3>Настоящий
@@ -43,19 +43,16 @@
     <section class="features">
       <ul>
         <li class="feature-home">
-          <img src="img/icon-1.svg" width="75" height="72" alt="Жильё">
           <h3>Жильё</h3>
           <p>Рекомендуем пожить в настоящем мотеле,
             всё как в кино!</p>
         </li>
         <li class="feature-food">
-          <img src="img/icon-3.svg" width="74" height="70" alt="Еда">
           <h3>Еда</h3>
           <p>Всегда заказывайте фирменный бургер,
             вы не разочаруетесь!</p>
         </li>
         <li class="feature-souvenir">
-          <img src="img/icon-2.svg" width="64" height="76" alt="Сувениры">
           <h3>Сувениры</h3>
           <p>Нетолько китайского, но и местного
             производства!</p>
@@ -64,7 +61,7 @@
     </section>
     <section class="main-city">
       <div class="main-photo">
-        <img src="img/layer-5.png" width="800" height="256" alt="Каньон">
+        <img src="img/layer-5.jpg" width="800" height="256" alt="Каньон">
       </div>
       <div class="main-sign">
         <h3>Там есть<br>
