--- a/hotel.html
+++ b/hotel.html
@@ -72,8 +72,12 @@
               <p class="hotels__price">от 4000 Р.</p>
             </div>
             <div class="hotels__buttons">
-              <button class="hotels__button-detail" type="button">Подробнее</button>
-              <button class="hotels__button-reserve" type="button">Забронировать</button>
+              <a href="detail.html" class="detail">
+                <button class="hotels__button-detail" type="button">Подробнее</button>
+              </a>
+              <a href="reservation.html" class="reservation">
+                <button class="hotels__button-reserve" type="button">Забронировать</button>
+              </a>
             </div>
           </div>
           <div class="hotels__rate">
@@ -94,8 +98,12 @@
               <p class="hotels__price">от 3000 Р.</p>
             </div>
             <div class="hotels__buttons">
-              <button class="hotels__button-detail" type="button">Подробнее</button>
-              <button class="hotels__button-reserve" type="button">Забронировать</button>
+              <a href="detail.html" class="detail">
+                <button class="hotels__button-detail" type="button">Подробнее</button>
+              </a>
+              <a href="reservation.html" class="reservation">
+                <button class="hotels__button-reserve" type="button">Забронировать</button>
+              </a>
             </div>
           </div>
           <div class="hotels__rate">
@@ -115,8 +123,12 @@
               <p class="hotels__price">от 2000 Р.</p>
             </div>
             <div class="hotels__buttons">
-              <button class="hotels__button-detail" type="button">Подробнее</button>
-              <button class="hotels__button-reserve" type="button">Забронировать</button>
+              <a href="detail.html" class="detail">
+                <button class="hotels__button-detail" type="button">Подробнее</button>
+              </a>
+              <a href="reservation.html" class="reservation">
+                <button class="hotels__button-reserve" type="button">Забронировать</button>
+              </a>
             </div>
           </div>
           <div class="hotels__rate">
