--- a/index.html
+++ b/index.html
@@ -106,6 +106,33 @@
       <p class="map__title">Заинтересовались?</p>
       <p class="map__desc">Укажите предпологаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <form action="" class="map__form" method="GET">
+          <p class="map__item">
+            <label for="arrival__date">
+              Дата заезда:
+              <input id="arrival__date" type="text" name="date" value="" placeholder="24 апреля 2017">
+            </label>
+          </p>
+          <p class="map__item">
+            <label for="departure__date">
+              Дата выезда:
+              <input id="departure__date" type="text" name="date" value="" placeholder="4 июля 2017">
+            </label>
+          </p>
+          <p class="map__item">
+            <label for="grown">
+              Взрослые:
+              <input id="grown" type="text" name="number" placeholder="2">
+            </label>
+          </p>
+          <p class="map__item">
+            <label for="children">
+              Дети:
+              <input id="children" type="text" name="number" placeholder="0">
+            </label>
+          </p>
+          <button class="button" type="submit">Найти</button>
+        </form>
     </section>
   </main>
   <footer class="main-footer">
